--- a/wp-content/themes/studio-903/components/slideshows-navigator.scss
+++ b/wp-content/themes/studio-903/components/slideshows-navigator.scss
@@ -28,6 +28,7 @@
     }
 
     &__list-item {
+        position: relative;
         flex: 1 0 auto;
         display: flex;
         justify-content: center;
